I got lost and broke everything so made a new one, I dind' tknow what else to do :(

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -41,18 +41,14 @@ h2 {
 }
 
 input {
-    display: block;
+    // display: block;
 }
     
     
 .flex-container {
-    /* In order to use flex-box we need to first set our display property */
     display: flex;
-    /* center the container horizontally */
     justify-content: center;
-    /* this will center content vertically */
     align-items: center;
-    /* tells the container to align the children in columns rather than rows */
 }
 
 .flex-column {
